--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testmekan",
+  "name": "personal",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -12,7 +12,6 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "nodemailer": "^6.4.18",
     "pug": "^3.0.0"
   },
   "devDependencies": {
